// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Month/> should match snapshot for NOT present month, selected 1`] = `
<div>
  <button
    class="month selected is-today"
    type="button"
    value=""
  >
    Jan
  </button>
</div>
`;

exports[`<Month/> should match snapshot for present month, NOT selected 1`] = `
<div>
  <button
    class="month is-today"
    type="button"
    value=""
  >
    Jan
  </button>
</div>
`;

exports[`<Month/> should match snapshot for present month, selected 1`] = `
<div>
  <button
    class="month selected is-today"
    type="button"
    value=""
  >
    Jan
  </button>
</div>
`;

exports[`<Month/> should math snapshot for NOT present month, NOT selected 1`] = `
<div>
  <button
    class="month is-today"
    type="button"
    value=""
  >
    Jan
  </button>
</div>
`;

exports[`<MonthPicker /> should match snapshot 1`] = `
<div>
  <div
    class="month-picker"
  >
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
    <button
      class="month is-today"
      type="button"
      value=""
    >
      Jan
    </button>
  </div>
</div>
`;
